--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-Django
+Django~=5.2.7
 pillow
+dj_database_url
 django-cleanup
-django-allauth
+django-allauth~=0.50.0
 django-htmx
+channels~=4.3.1
+django-environ~=0.12.0
+Twisted~=25.5.0
+autobahn~=24.4.2
+asgiref~=3.10.0
+shortuuid~=1.0.13
