--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,48 @@
-Django~=5.2.7
-pillow
-dj_database_url
-django-cleanup
-django-allauth~=0.50.0
-django-htmx
-channels~=4.3.1
-django-environ~=0.12.0
-Twisted~=25.5.0
-autobahn~=24.4.2
-asgiref~=3.10.0
-shortuuid~=1.0.13
+asgiref==3.10.0
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+certifi==2025.10.5
+cffi==2.0.0
+channels==4.3.1
+channels_redis==4.3.0
+charset-normalizer==3.4.3
+cloudinary==1.44.1
+constantly==23.10.4
+cryptography==46.0.2
+daphne==4.2.1
+defusedxml==0.7.1
+dj-database-url==3.0.1
+Django==5.2.7
+django-allauth==0.50.0
+django-cleanup==9.0.0
+django-cloudinary-storage==0.3.0
+django-environ==0.12.0
+django-htmx==1.26.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+msgpack==1.1.1
+oauthlib==3.3.1
+pillow==11.3.0
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+PyJWT==2.10.1
+pyOpenSSL==25.3.0
+python3-openid==3.2.0
+redis==6.4.0
+requests==2.32.5
+requests-oauthlib==2.0.0
+service-identity==24.2.0
+setuptools==80.9.0
+shortuuid==1.0.13
+six==1.17.0
+sqlparse==0.5.3
+Twisted==25.5.0
+txaio==25.9.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+whitenoise==6.11.0
+zope.interface==8.0.1
