--- a/requirements.txt
+++ b/requirements.txt
@@ -19,11 +19,13 @@ django-cleanup==9.0.0
 django-cloudinary-storage==0.3.0
 django-environ==0.12.0
 django-htmx==1.26.0
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 msgpack==1.1.1
 oauthlib==3.3.1
+packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
